After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 614991 - baseparse: Don't emit bitrate tags too early
baseparse: Don't emit bitrate tags too early
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
unspecified
Other All
: Normal normal
: 0.10.19
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2010-04-06 18:03 UTC by Arun Raghavan
Modified: 2010-04-09 08:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
baseparse: Don't emit bitrate tags too early (4.60 KB, patch)
2010-04-06 18:03 UTC, Arun Raghavan
committed Details | Review

Description Arun Raghavan 2010-04-06 18:03:03 UTC
Attaching a patch to suppress bitrate tags till we've collected a few frames. Otherwise, the bitrates posted from the first few frames tend to be wildly inaccurate.
Comment 1 Arun Raghavan 2010-04-06 18:03:06 UTC
Created attachment 158066 [details] [review]
baseparse: Don't emit bitrate tags too early

We wait to parse a minimum number of frames (10, arbitrarily) before
emiting bitrate tags so that our early estimates are not wildly
inaccurate for streams that start with a silence. If the stream ends
before that, we just emit the tags anyway.

While it _would_ be nicer to be specify the threshold to start pushing
the tags in terms of duration, this would introduce more complexity than
this merits.
Comment 2 Sebastian Dröge (slomo) 2010-04-07 09:52:16 UTC
commit 90753ceb5ee1133bac2b780610f2beda7566895e
Author: Arun Raghavan <arun.raghavan@collabora.co.uk>
Date:   Fri Mar 26 18:56:49 2010 +0000

    baseparse: Don't emit bitrate tags too early
    
    We wait to parse a minimum number of frames (10, arbitrarily) before
    emiting bitrate tags so that our early estimates are not wildly
    inaccurate for streams that start with a silence. If the stream ends
    before that, we just emit the tags anyway.
    
    While it _would_ be nicer to be specify the threshold to start pushing
    the tags in terms of duration, this would introduce more complexity than
    this merits.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=614991
Comment 3 Stefan Sauer (gstreamer, gtkdoc dev) 2010-04-09 08:36:53 UTC
Would it make sense to look at the deltas and start posting when the delata is "small enough"?